update: imagenes y logos grises
se arreglaron pequeños bugs de la versión anterior, se cambiaron las imagenes dentro de la app y en la api a escalas de grises, se arregló lo de LExpress que no mostraba los demas vehiculos y se arreglo el problema del registro

--- a/LineaExpres/app/src/main/res/drawable/newcolorbluegraded.xml
+++ b/LineaExpres/app/src/main/res/drawable/newcolorbluegraded.xml
@@ -3,9 +3,12 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#018EC2"
-                android:endColor="#223769"
+                android:startColor="#F5F5F1"
+                android:endColor="#2B2B2B"
                 android:angle="0" />
+               <!-- colores originales android:startColor="#018EC2"
+                android:endColor="#223769"
+                android:angle="0" />-->
             <corners android:radius="10dp" />
         </shape>
     </item>
