--- a/LineaExpres/app/src/main/res/drawable/backgroundnewtheme.xml
+++ b/LineaExpres/app/src/main/res/drawable/backgroundnewtheme.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#CC0F6A"
-        android:endColor="#63239D"
+        android:startColor="#E4E4E7"
+        android:endColor="#3C3C3C"
         android:angle="0" />
+        <!--android:startColor="#CC0F6A"
+        android:endColor="#63239D"
+        android:angle="0" />-->
     <corners android:radius="10dp" />
 
     />
