--- a/LineaExpres/app/src/main/res/drawable/buttons.xml
+++ b/LineaExpres/app/src/main/res/drawable/buttons.xml
@@ -3,7 +3,8 @@
     <item>
         <shape android:layout_width="match_parent">
             <corners android:radius="10dp" />
-            <solid android:color="@color/light_blue" />
+            <solid android:color="#666666" />
+            <!--<solid android:color="@color/light_blue" />-->
         </shape>
     </item>
 </selector>
