--- a/LineaExpres/app/src/main/res/navigation/mobile_navigation.xml
+++ b/LineaExpres/app/src/main/res/navigation/mobile_navigation.xml
@@ -418,7 +418,11 @@
         tools:layout="@layout/fragment_account_verified" >
     </fragment>
 
-
+    <fragment
+        android:id="@+id/navigation_acercade"
+        android:name="mx.gob.puentesfronterizos.lineaexpres.ui.acercade.acercadeFragment"
+        android:label="@string/title_home"
+        tools:layout="@layout/fragment_home" />
 
 
 </navigation>
