--- a/LineaExpres/app/src/main/res/layout/fragment_acercade.xml
+++ b/LineaExpres/app/src/main/res/layout/fragment_acercade.xml
@@ -47,14 +47,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="28dp"
                 android:fontFamily="@font/merriweather_regular"
-                android:text="4.0 Test 260324"
+                android:text="4.0 "
                 android:textColor="@color/black"
                 android:textSize="@dimen/globalFontSize"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.2"
-                app:layout_constraintStart_toStartOf="parent"
-                />
+                app:layout_constraintStart_toStartOf="parent" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.constraintlayout.widget.ConstraintLayout>
