--- a/LineaExpres/app/src/main/res/layout/fragment_req_actualizacion_placas.xml
+++ b/LineaExpres/app/src/main/res/layout/fragment_req_actualizacion_placas.xml
@@ -23,6 +23,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             >
+
             <TextView
                 android:id="@+id/req_inscription_title"
                 android:layout_width="match_parent"
@@ -35,6 +36,23 @@
                 style="@style/pelcahomemasinformacion"
                 android:textSize="20sp"
                 android:textStyle="bold" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/uploadCirculationCardPhotoBtn5"
+                style="@style/buttons"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/newcolorbluegraded"
+                android:fontFamily="@font/montserrat_bold"
+                android:text="@string/BtnUploadCirculationCard"
+                android:textSize="@dimen/globalFontSize" />
+
+            <ImageView
+                android:id="@+id/tarjetaCirculacionPhotoImageView5"
+                android:layout_width="match_parent"
+                android:layout_height="220dp"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/WhyExplainTitle"
